--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "got": "^8.2.0",
     "html-minifier": "^3.5.9",
     "inline-source": "^6.1.2",
+    "ioredis": "^3.2.2",
     "joi": "^13.1.1",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
@@ -35,6 +36,7 @@
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
     "load-json-file": "^4.0.0",
+    "mailgen": "^2.0.2",
     "marked": "^0.3.16",
     "node-cache": "^4.1.1",
     "nodemailer": "^4.4.0",
