--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
     "marked": "^0.3.16",
+    "moment": "^2.21.0",
     "nodemailer": "^4.4.0",
     "nunjucks": "^3.1.0",
     "nunjucks-markdown": "^2.0.1",
     "superagent": "^3.8.2",
-    "winston": "^2.4.1"
+    "winston": "^3.0.0-rc3"
   },
   "devDependencies": {
     "@types/winston": "^2.3.8",
