--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "koa-logger": "^3.1.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
+    "lodash": "^4.17.5",
     "marked": "^0.3.16",
     "moment": "^2.21.0",
     "nodemailer": "^4.4.0",
