--- a/package.json
+++ b/package.json
@@ -22,31 +22,26 @@
   "homepage": "https://github.com/FTChinese/next-myft#readme",
   "dependencies": {
     "debug": "^3.1.0",
-    "got": "^8.2.0",
-    "html-minifier": "^3.5.9",
-    "inline-source": "^6.1.2",
+    "html-minifier": "^3.5.16",
+    "inline-source": "^6.1.5",
     "ioredis": "^3.2.2",
     "joi": "^13.4.0",
     "koa": "^2.5.0",
-    "koa-bodyparser": "^4.2.0",
-    "koa-logger": "^3.1.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.8.1",
-    "lodash": "^4.17.5",
-    "marked": "^0.3.16",
-    "moment": "^2.21.0",
-    "nodemailer": "^4.4.0",
-    "nunjucks": "^3.1.0",
-    "nunjucks-markdown": "^2.0.1",
-    "superagent": "^3.8.2",
-    "validator": "^9.4.1",
-    "winston": "^3.0.0-rc3"
+    "lodash": "^4.17.10",
+    "moment": "^2.21.2",
+    "nunjucks": "^3.1.3",
+    "superagent": "^3.8.3",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
     "ava": "^0.25.0",
-    "bootstrap": "^4.0.0",
-    "bootstrap.native": "^2.0.21",
-    "chance": "^1.0.13",
-    "koa-static": "^4.0.2"
+    "bootstrap": "^4.1.1",
+    "bootstrap.native": "^2.0.23",
+    "chance": "^1.0.16",
+    "koa-static": "^5.0.0"
   }
 }
