--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ftchinese/next-myft",
+  "name": "@ftchinese/next-user",
   "version": "0.0.1",
-  "description": "myft",
+  "description": "User setting system",
   "main": "index.js",
   "scripts": {
     "start": "npm run serve",
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FTChinese/next-myft.git"
+    "url": "git+https://github.com/FTChinese/next-user.git"
   },
   "author": "weiguo.ni",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/FTChinese/next-myft/issues"
+    "url": "https://github.com/FTChinese/next-user/issues"
   },
-  "homepage": "https://github.com/FTChinese/next-myft#readme",
+  "homepage": "https://github.com/FTChinese/next-user#readme",
   "dependencies": {
     "csrf": "^3.0.6",
     "debug": "^3.1.0",
