--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "ava",
     "postversion": "git push && git push --tags",
     "postinstall": "",
-    "clean": "rm -rf dist/*"
+    "clean": "rm -rf dist/*",
+    "vegeta": "vegeta attack -targets=targets.txt -rate=100 -duration=60s > .tmp/results.bin",
+    "report": "vegeta report -inputs=.tmp/results.bin -reporter=plot > .tmp/plot.html"
   },
   "repository": {
     "type": "git",
@@ -35,6 +37,7 @@
     "moment": "^2.21.2",
     "nunjucks": "^3.1.3",
     "superagent": "^3.8.3",
+    "ua-parser-js": "^0.7.18",
     "winston": "^3.0.0"
   },
   "devDependencies": {
