--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "User setting system",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "ava",
+    "start": "npm run serve",
+    "serve": "node dist/index.js",
+    "watch-node": "nodemon dist/index.js",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "test": "jest",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
     "postversion": "git push && git push --tags",
     "postinstall": "",
     "clean": "rm -rf dist/*",
@@ -26,27 +32,41 @@
   "homepage": "https://github.com/FTChinese/next-user#readme",
   "dependencies": {
     "csrf": "^3.0.6",
-    "debug": "^3.1.0",
-    "ioredis": "^3.2.2",
-    "joi": "^13.4.0",
-    "koa": "^2.5.1",
+    "debug": "^4.1.0",
+    "joi": "^13.7.0",
+    "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.1",
     "koa-csrf": "^3.0.6",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "koa-session": "^5.8.1",
-    "lodash": "^4.17.10",
+    "koa-session": "^5.9.0",
+    "lodash": "^4.17.11",
     "moment": "^2.21.2",
     "nunjucks": "^3.1.3",
     "superagent": "^3.8.3",
     "ua-parser-js": "^0.7.18",
-    "winston": "^3.0.0"
+    "winston": "^3.1.0"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
-    "bootstrap": "^4.1.1",
+    "@types/debug": "0.0.31",
+    "@types/joi": "^13.6.0",
+    "@types/koa": "^2.0.46",
+    "@types/koa-bodyparser": "^5.0.1",
+    "@types/koa-router": "^7.0.32",
+    "@types/koa-session": "^5.7.4",
+    "@types/nunjucks": "^3.1.0",
+    "@types/superagent": "^3.8.4",
+    "@types/ua-parser-js": "^0.7.32",
+    "bootstrap": "^4.1.3",
     "bootstrap.native": "^2.0.23",
     "chance": "^1.0.16",
-    "koa-static": "^5.0.0"
+    "concurrently": "^4.0.1",
+    "jest": "^23.6.0",
+    "koa-static": "^5.0.0",
+    "nodemon": "^1.18.4",
+    "ts-jest": "^23.10.4",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.2"
   }
 }
