--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "csrf": "^3.0.6",
     "debug": "^4.1.0",
+    "dotenv": "^6.1.0",
     "joi": "^13.7.0",
     "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.1",
@@ -49,11 +50,14 @@
   },
   "devDependencies": {
     "@types/debug": "0.0.31",
+    "@types/dotenv": "^4.0.3",
     "@types/joi": "^13.6.0",
     "@types/koa": "^2.0.46",
     "@types/koa-bodyparser": "^5.0.1",
+    "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.32",
     "@types/koa-session": "^5.7.4",
+    "@types/koa-static": "^4.0.0",
     "@types/nunjucks": "^3.1.0",
     "@types/superagent": "^3.8.4",
     "@types/ua-parser-js": "^0.7.32",
