--- a/package.json
+++ b/package.json
@@ -49,28 +49,12 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
-    "@types/debug": "0.0.31",
-    "@types/dotenv": "^4.0.3",
-    "@types/joi": "^13.6.0",
-    "@types/koa": "^2.0.46",
-    "@types/koa-bodyparser": "^5.0.1",
-    "@types/koa-logger": "^3.1.1",
-    "@types/koa-router": "^7.0.32",
-    "@types/koa-session": "^5.7.4",
-    "@types/koa-static": "^4.0.0",
-    "@types/nunjucks": "^3.1.0",
-    "@types/superagent": "^3.8.4",
-    "@types/ua-parser-js": "^0.7.32",
+    "ava": "^0.25.0",
     "bootstrap": "^4.1.3",
     "bootstrap.native": "^2.0.23",
     "chance": "^1.0.16",
     "concurrently": "^4.0.1",
-    "jest": "^23.6.0",
     "koa-static": "^5.0.0",
-    "nodemon": "^1.18.4",
-    "ts-jest": "^23.10.4",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.2"
+    "nodemon": "^1.18.4"
   }
 }
