--- a/package.json
+++ b/package.json
@@ -33,27 +33,26 @@
   "dependencies": {
     "csrf": "^3.0.6",
     "debug": "^4.1.0",
-    "dotenv": "^6.1.0",
-    "joi": "^13.7.0",
-    "koa": "^2.5.3",
+    "dotenv": "^6.2.0",
+    "joi": "^14.3.0",
+    "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-csrf": "^3.0.6",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "koa-session": "^5.9.0",
+    "koa-session": "^5.10.0",
     "lodash": "^4.17.11",
-    "moment": "^2.21.2",
-    "nunjucks": "^3.1.3",
-    "superagent": "^3.8.3",
-    "ua-parser-js": "^0.7.18",
-    "winston": "^3.1.0"
+    "moment": "^2.23.0",
+    "nunjucks": "^3.1.6",
+    "superagent": "^4.0.0",
+    "ua-parser-js": "^0.7.19"
   },
   "devDependencies": {
     "ava": "^0.25.0",
     "bootstrap": "^4.1.3",
-    "bootstrap.native": "^2.0.23",
-    "chance": "^1.0.16",
-    "concurrently": "^4.0.1",
+    "bootstrap.native": "^2.0.24",
+    "chance": "^1.0.18",
+    "concurrently": "^4.1.0",
     "koa-static": "^5.0.0",
     "nodemon": "^1.18.4"
   }
