--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "moment": "^2.23.0",
     "nunjucks": "^3.1.6",
     "superagent": "^4.0.0",
-    "ua-parser-js": "^0.7.19"
+    "ua-parser-js": "^0.7.19",
+    "validator": "^10.9.0"
   },
   "devDependencies": {
     "ava": "^0.25.0",
