--- a/package.json
+++ b/package.json
@@ -49,12 +49,10 @@
     "validator": "^10.9.0"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
     "bootstrap": "^4.1.3",
     "bootstrap.native": "^2.0.24",
     "chance": "^1.0.18",
     "concurrently": "^4.1.0",
-    "koa-static": "^5.0.0",
-    "nodemon": "^1.18.4"
+    "koa-static": "^5.0.0"
   }
 }
