--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "validator": "^10.9.0"
   },
   "devDependencies": {
+    "ava": "^1.0.1",
     "bootstrap": "^4.1.3",
     "bootstrap.native": "^2.0.24",
     "chance": "^1.0.18",
