--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "koa-session": "^5.10.0",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
+    "numeral": "^2.0.6",
     "nunjucks": "^3.1.6",
     "superagent": "^4.0.0",
     "validator": "^10.9.0"
