--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "validator": "^10.9.0"
   },
   "devDependencies": {
-    "ava": "^1.0.1",
     "bootstrap": "^4.1.3",
     "bootstrap.native": "^2.0.24",
     "chance": "^1.0.18",
-    "koa-static": "^5.0.0"
+    "date-fns": "^1.30.1",
+    "jest": "^23.6.0",
+    "koa-static": "^5.0.0",
+    "sinon": "^7.2.2"
   }
 }
