--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "koa-router": "^7.4.0",
     "koa-session": "^5.10.0",
     "lodash": "^4.17.11",
+    "luxon": "^1.9.0",
     "moment": "^2.23.0",
     "numeral": "^2.0.6",
     "nunjucks": "^3.1.6",
