--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "koa-session": "^5.10.1",
     "lodash": "^4.17.11",
     "luxon": "^1.9.0",
+    "materialize-css": "^1.0.0",
     "numeral": "^2.0.6",
     "nunjucks": "^3.1.7",
     "superagent": "^4.1.0",
