--- a/.editorconfig
+++ b/.editorconfig
@@ -23,7 +23,7 @@ indent_size = 4
 indent_style = tab
 
 # Indentation override for all JS under lib directory
-[*.{js,json}]
+[*.{js,json,html}]
 indent_style = space
 indent_size = 2
 
