--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "luxon": "^1.9.0",
     "numeral": "^2.0.6",
     "nunjucks": "^3.1.7",
+    "qrcode": "^1.3.3",
     "superagent": "^4.1.0",
     "validator": "^10.11.0"
   },
