--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "koa-session": "^5.10.1",
     "lodash": "^4.17.11",
     "luxon": "^1.9.0",
+    "mobile-detect": "^1.4.3",
     "numeral": "^2.0.6",
     "nunjucks": "^3.1.7",
     "qrcode": "^1.3.3",
     "superagent": "^4.1.0",
+    "ua-parser-js": "^0.7.19",
     "validator": "^10.11.0"
   },
   "devDependencies": {
