--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nunjucks": "^3.1.7",
     "qrcode": "^1.3.3",
     "superagent": "^4.1.0",
+    "toml": "^3.0.0",
     "ua-parser-js": "^0.7.19",
     "validator": "^10.11.0"
   },
