feat: add gulp sass

--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production PORT=4100 node index.js",
-    "serve": "nodemon dist/index.js",
-    "watch": "watch \"make js\" client",
+    "server": "nodemon dist/index.js",
     "watch-ts": "tsc -w",
     "build-js": "rollup -c",
-    "build-css": "node-sass --output-style=compressed client/scss/main.scss dist/style/bundle.css",
+    "build-css:prod": "node-sass --output-style=compressed --source-map=build/production client/scss/main.scss build/production/main.css",
+    "build-css:dist": "node-sass --output-style=expanded --source-map=build/dist client/scss/main.scss build/dist/main.css",
+    "build-css": "npm run build-css:dist && npm run build-css:prod",
+    "build": "build-js && build-css",
     "inline": "node ./util/inline.js",
-    "build": "npm run build-js && npm run build-css && npm run inline",
+    "build:html": "npm run build-js && npm run build-css:prod && npm run inline",
     "test": "jest",
     "postversion": "git push && git push --tags",
     "postinstall": ""
@@ -53,10 +55,13 @@
     "bootstrap": "^4.3.1",
     "bootstrap.native": "^2.0.25",
     "faker": "^4.1.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "inline-source": "^6.1.9",
     "jest": "^24.1.0",
     "koa-static": "^5.0.0",
+    "node-sass": "^4.11.0",
     "rollup": "^1.10.1",
     "rollup-plugin-babel-minify": "^8.0.0",
     "rollup-plugin-typescript": "^1.0.1",
