--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon dist/index.js",
     "watch-ts": "tsc -w",
     "build-js": "rollup -c",
-    "build-css:prod": "node-sass --output-style=compressed --source-map=build/production client/scss/main.scss build/production/main.css",
+    "build-css:prod": "node-sass --output-style=compressed --source-map=build/production --include-path=node_modules/bootstrap client/scss/main.scss build/production/main.css",
     "build-css:dist": "node-sass --output-style=expanded --source-map=build/dist client/scss/main.scss build/dist/main.css",
     "build-css": "npm run build-css:dist && npm run build-css:prod",
     "build": "build-js && build-css",
@@ -32,7 +32,6 @@
     "@hapi/joi": "^15.0.0",
     "csrf": "^3.1.0",
     "debug": "^4.1.1",
-    "del": "^4.1.0",
     "gulp": "^4.0.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
@@ -61,12 +60,11 @@
     "inline-source": "^6.1.9",
     "jest": "^24.7.1",
     "koa-static": "^5.0.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "rollup": "^1.10.1",
     "rollup-plugin-babel-minify": "^8.0.0",
     "rollup-plugin-typescript": "^1.0.1",
     "tslib": "^1.9.3",
-    "typescript": "^3.4.5",
-    "watch": "^1.0.2"
+    "typescript": "^3.4.5"
   }
 }
