--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "User setting system",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production PORT=4100 URL_PREFIX=/user node index.js",
+    "start": "NODE_ENV=production PORT=4100 node index.js",
     "test": "jest",
     "postversion": "git push && git push --tags"
   },
