feat: upgrade deps

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "start": "NODE_ENV=production PORT=4100 node index.js",
     "test": "jest",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "watch-node": "nodemon dist/server.js",
+    "watch-ts": "tsc -w",
+    "build-ts": "tsc",
+    "clean": "rm -rf dist/*"
   },
   "repository": {
     "type": "git",
@@ -20,17 +24,18 @@
   },
   "homepage": "https://github.com/FTChinese/next-user#readme",
   "dependencies": {
-    "@hapi/joi": "^15.1.0",
+    "@hapi/joi": "^15.1.1",
     "csrf": "^3.1.0",
     "debug": "^4.1.1",
-    "koa": "^2.7.0",
+    "koa": "^2.8.1",
     "koa-bodyparser": "^4.2.1",
     "koa-csrf": "^3.0.7",
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
-    "koa-session": "^5.12.2",
+    "koa-session": "^5.12.3",
+    "koa-static": "^5.0.0",
     "lodash": "^4.17.15",
-    "luxon": "^1.17.2",
+    "luxon": "^1.17.3",
     "mobile-detect": "^1.4.3",
     "numeral": "^2.0.6",
     "nunjucks": "^3.2.0",
@@ -41,22 +46,34 @@
     "validator": "^11.0.0"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
+    "@types/hapi__joi": "^15.0.4",
+    "@types/koa": "^2.0.49",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-logger": "^3.1.1",
+    "@types/koa-router": "^7.0.42",
+    "@types/koa-session": "^5.10.1",
+    "@types/koa-static": "^4.0.1",
+    "@types/luxon": "^1.15.2",
+    "@types/node": "^12.7.5",
+    "@types/numeral": "0.0.26",
+    "@types/nunjucks": "^3.1.2",
     "bootstrap": "^4.3.1",
-    "bootstrap.native": "^2.0.26",
+    "bootstrap.native": "^2.0.27",
     "faker": "^4.1.0",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
-    "inline-source": "^7.0.0",
-    "jest": "^24.8.0",
-    "koa-static": "^5.0.0",
+    "inline-source": "^7.1.0",
+    "jest": "^24.9.0",
     "node-sass": "^4.12.0",
-    "rollup": "^1.19.3",
+    "nodemon": "^1.19.2",
+    "rollup": "^1.20.4",
     "rollup-plugin-babel-minify": "^9.0.0",
     "rollup-plugin-typescript": "^1.0.1",
     "tslib": "^1.10.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.3"
   },
   "pkg": {
     "assets": "view/**/*"
