--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "numeral": "^2.0.6",
     "nunjucks": "^3.2.0",
     "qrcode": "^1.4.1",
+    "reflect-metadata": "^0.1.13",
     "superagent": "^5.1.0",
     "toml": "^3.0.0",
     "ua-parser-js": "^0.7.20",
