--- a/.editorconfig
+++ b/.editorconfig
@@ -14,7 +14,7 @@ insert_final_newline = true
 charset = utf-8
 
 # 4 space indentation
-[*.{py,sql}]
+[*.{py,sql,ts}]
 indent_style = space
 indent_size = 4
 
@@ -23,7 +23,7 @@ indent_size = 4
 indent_style = tab
 
 # Indentation override for all JS under lib directory
-[*.{js,json,html,scss}]
+[*.{js,json,html}]
 indent_style = space
 indent_size = 2
 
