--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/FTChinese/next-user#readme",
   "dependencies": {
     "@hapi/joi": "^15.1.1",
+    "@types/superagent": "^4.1.3",
     "csrf": "^3.1.0",
     "debug": "^4.1.1",
     "koa": "^2.8.1",
@@ -43,6 +44,7 @@
     "reflect-metadata": "^0.1.13",
     "superagent": "^5.1.0",
     "toml": "^3.0.0",
+    "typedjson": "^1.4.0",
     "ua-parser-js": "^0.7.20",
     "validator": "^11.0.0"
   },
