--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/FTChinese/next-user#readme",
   "dependencies": {
     "@hapi/joi": "^15.1.1",
-    "@types/superagent": "^4.1.3",
+    "chance": "^1.1.0",
     "csrf": "^3.1.0",
     "debug": "^4.1.1",
     "koa": "^2.8.1",
@@ -49,8 +49,10 @@
     "validator": "^11.0.0"
   },
   "devDependencies": {
+    "@types/chance": "^1.0.6",
     "@types/debug": "^4.1.5",
     "@types/hapi__joi": "^15.0.4",
+    "@types/jest": "^24.0.18",
     "@types/koa": "^2.0.49",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-logger": "^3.1.1",
@@ -61,6 +63,7 @@
     "@types/node": "^12.7.5",
     "@types/numeral": "0.0.26",
     "@types/nunjucks": "^3.1.2",
+    "@types/superagent": "^4.1.3",
     "bootstrap": "^4.3.1",
     "bootstrap.native": "^2.0.27",
     "faker": "^4.1.0",
@@ -75,10 +78,11 @@
     "rollup": "^1.20.4",
     "rollup-plugin-babel-minify": "^9.0.0",
     "rollup-plugin-typescript": "^1.0.1",
+    "ts-jest": "^24.1.0",
     "tslib": "^1.10.0",
     "typescript": "^3.6.3"
   },
   "pkg": {
-    "assets": "view/**/*"
+    "assets": "views/**/*"
   }
 }
