--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "outDir": "build",
+    "outDir": "../build",
     "target": "es5",
     "module": "es6",
     "downlevelIteration": true,
@@ -12,6 +12,6 @@
     "moduleResolution": "node"
   },
   "include": [
-    "client/script/*"
+    "script/*"
   ]
 }
