--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "toml": "^3.0.0",
     "typedjson": "^1.4.0",
     "ua-parser-js": "^0.7.20",
-    "validator": "^11.0.0"
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "@types/chance": "^1.0.6",
@@ -64,6 +64,7 @@
     "@types/numeral": "0.0.26",
     "@types/nunjucks": "^3.1.2",
     "@types/superagent": "^4.1.3",
+    "@types/validator": "^10.11.3",
     "bootstrap": "^4.3.1",
     "bootstrap.native": "^2.0.27",
     "faker": "^4.1.0",
