--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/node": "^12.7.5",
     "@types/numeral": "0.0.26",
     "@types/nunjucks": "^3.1.2",
+    "@types/qrcode": "^1.3.4",
     "@types/superagent": "^4.1.3",
     "@types/validator": "^10.11.3",
     "bootstrap": "^4.3.1",
