--- a/package.json
+++ b/package.json
@@ -25,48 +25,51 @@
   "homepage": "https://github.com/FTChinese/next-user#readme",
   "dependencies": {
     "@hapi/joi": "^15.1.1",
+    "@types/marked": "^0.7.2",
     "chance": "^1.1.0",
     "csrf": "^3.1.0",
     "debug": "^4.1.1",
-    "koa": "^2.8.1",
+    "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
-    "koa-csrf": "^3.0.7",
+    "koa-csrf": "^3.0.8",
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.15",
-    "luxon": "^1.17.3",
-    "mobile-detect": "^1.4.3",
+    "luxon": "^1.21.3",
+    "marked": "^0.8.0",
+    "mobile-detect": "^1.4.4",
     "numeral": "^2.0.6",
     "nunjucks": "^3.2.0",
-    "qrcode": "^1.4.1",
+    "nunjucks-markdown": "^2.0.1",
+    "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
-    "superagent": "^5.1.0",
+    "superagent": "^5.1.2",
     "toml": "^3.0.0",
-    "typedjson": "^1.4.0",
+    "typedjson": "^1.5.1",
     "ua-parser-js": "^0.7.20",
-    "validator": "^11.1.0"
+    "validator": "^12.1.0"
   },
   "devDependencies": {
-    "@types/chance": "^1.0.6",
+    "@types/chance": "^1.0.7",
     "@types/debug": "^4.1.5",
     "@types/hapi__joi": "^15.0.4",
-    "@types/jest": "^24.0.18",
-    "@types/koa": "^2.0.49",
+    "@types/jest": "^24.0.23",
+    "@types/koa": "^2.11.0",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.42",
     "@types/koa-session": "^5.10.1",
     "@types/koa-static": "^4.0.1",
-    "@types/luxon": "^1.15.2",
-    "@types/node": "^12.7.5",
+    "@types/luxon": "^1.21.0",
+    "@types/node": "^12.12.17",
     "@types/numeral": "0.0.26",
     "@types/nunjucks": "^3.1.2",
     "@types/qrcode": "^1.3.4",
-    "@types/superagent": "^4.1.3",
-    "@types/validator": "^10.11.3",
-    "bootstrap": "^4.3.1",
+    "@types/superagent": "^4.1.4",
+    "@types/validator": "^12.0.1",
+    "bootstrap": "^4.4.1",
     "bootstrap.native": "^2.0.27",
     "faker": "^4.1.0",
     "gulp": "^4.0.2",
@@ -75,14 +78,14 @@
     "gulp-typescript": "^5.0.1",
     "inline-source": "^7.1.0",
     "jest": "^24.9.0",
-    "node-sass": "^4.12.0",
-    "nodemon": "^1.19.2",
-    "rollup": "^1.20.4",
-    "rollup-plugin-babel-minify": "^9.0.0",
+    "node-sass": "^4.13.0",
+    "nodemon": "^2.0.2",
+    "rollup": "^1.27.13",
+    "rollup-plugin-babel-minify": "^9.1.1",
     "rollup-plugin-typescript": "^1.0.1",
-    "ts-jest": "^24.1.0",
+    "ts-jest": "^24.2.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.7.3"
   },
   "pkg": {
     "assets": "views/**/*"
