--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "@ftchinese/next-user",
   "version": "0.7.14",
   "description": "User setting system",
-  "main": "index.js",
-  "bin": "index.js",
+  "main": "src/server.ts",
+  "bin": "dist/server.ts",
   "scripts": {
-    "start": "NODE_ENV=production PORT=4100 node index.js",
     "test": "jest",
     "postversion": "git push && git push --tags",
     "watch-node": "nodemon dist/server.js",
@@ -25,8 +24,7 @@
   "homepage": "https://github.com/FTChinese/next-user#readme",
   "dependencies": {
     "@hapi/joi": "^15.1.1",
-    "@types/marked": "^0.7.2",
-    "chance": "^1.1.0",
+    "chance": "^1.1.4",
     "csrf": "^3.1.0",
     "debug": "^4.1.1",
     "koa": "^2.11.0",
@@ -34,60 +32,77 @@
     "koa-csrf": "^3.0.8",
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
-    "koa-session": "^5.12.3",
+    "koa-session": "^5.13.1",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.15",
-    "luxon": "^1.21.3",
-    "marked": "^0.8.0",
+    "luxon": "^1.23.0",
+    "marked": "^0.8.2",
     "mobile-detect": "^1.4.4",
     "numeral": "^2.0.6",
     "nunjucks": "^3.2.0",
     "nunjucks-markdown": "^2.0.1",
     "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
-    "superagent": "^5.1.2",
+    "superagent": "^5.2.2",
     "toml": "^3.0.0",
     "typedjson": "^1.5.1",
-    "ua-parser-js": "^0.7.20",
-    "validator": "^12.1.0"
+    "ua-parser-js": "^0.7.21",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
-    "@types/chance": "^1.0.7",
+    "@types/chance": "^1.0.10",
     "@types/debug": "^4.1.5",
     "@types/hapi__joi": "^15.0.4",
-    "@types/jest": "^24.0.23",
-    "@types/koa": "^2.11.0",
+    "@types/jest": "^25.2.1",
+    "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-logger": "^3.1.1",
-    "@types/koa-router": "^7.0.42",
-    "@types/koa-session": "^5.10.1",
+    "@types/koa-router": "^7.4.0",
+    "@types/koa-session": "^5.10.2",
     "@types/koa-static": "^4.0.1",
-    "@types/luxon": "^1.21.0",
-    "@types/node": "^12.12.17",
+    "@types/luxon": "^1.22.0",
+    "@types/marked": "^0.7.4",
+    "@types/node": "^13.13.2",
     "@types/numeral": "0.0.26",
-    "@types/nunjucks": "^3.1.2",
+    "@types/nunjucks": "^3.1.3",
     "@types/qrcode": "^1.3.4",
-    "@types/superagent": "^4.1.4",
-    "@types/validator": "^12.0.1",
+    "@types/superagent": "^4.1.7",
+    "@types/validator": "^13.0.0",
     "bootstrap": "^4.4.1",
     "bootstrap.native": "^2.0.27",
     "faker": "^4.1.0",
     "gulp": "^4.0.2",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
-    "inline-source": "^7.1.0",
-    "jest": "^24.9.0",
-    "node-sass": "^4.13.0",
-    "nodemon": "^2.0.2",
-    "rollup": "^1.27.13",
-    "rollup-plugin-babel-minify": "^9.1.1",
+    "inline-source": "^7.2.0",
+    "jest": "^25.4.0",
+    "node-sass": "^4.14.0",
+    "nodemon": "^2.0.3",
+    "rollup": "^2.7.2",
+    "rollup-plugin-babel-minify": "^10.0.0",
     "rollup-plugin-typescript": "^1.0.1",
-    "ts-jest": "^24.2.0",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.3"
+    "ts-jest": "^25.4.0",
+    "tslib": "^1.11.1",
+    "typescript": "^3.8.3"
   },
   "pkg": {
     "assets": "views/**/*"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "public/**",
+      "test/**"
+    ],
+    "env": {
+      "NODE_ENV": "development",
+      "PORT": 4300,
+      "DEBUG": "user*"
+    },
+    "execMap": {
+      "ts": "ts-node"
+    },
+    "verbose": true,
+    "ext": "ts"
   }
 }
