--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "scripts": {
     "test": "jest",
     "postversion": "git push && git push --tags",
-    "watch-node": "nodemon dist/server.js",
-    "watch-ts": "tsc -w",
-    "build-ts": "tsc",
-    "clean": "rm -rf dist/*"
+    "clean": "rm -rf build/*",
+    "build-css": "node-sass --output-style=compressed --include-path=node_modules/bootstrap client/scss/main.scss build/style/main.css",
+    "build-ts": "tsc -p client --outDir build/ts-out",
+    "watch-ts": "tsc -p client -w --outDir build/ts-out",
+    "build-js": "rollup -c client/rollup.config.js",
+    "watch-js": "rollup -c client/rollup.config.js -w",
+    "dev": "npm-run-all --parallel watch-js",
+    "build": "npm run build-js && npm run build-css"
   },
   "repository": {
     "type": "git",
@@ -28,7 +32,7 @@
     "csrf": "^3.1.0",
     "debug": "^4.1.1",
     "koa": "^2.11.0",
-    "koa-bodyparser": "^4.2.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-csrf": "^3.0.8",
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
@@ -36,10 +40,10 @@
     "koa-static": "^5.0.0",
     "lodash": "^4.17.15",
     "luxon": "^1.23.0",
-    "marked": "^0.8.2",
+    "marked": "^1.0.0",
     "mobile-detect": "^1.4.4",
     "numeral": "^2.0.6",
-    "nunjucks": "^3.2.0",
+    "nunjucks": "^3.2.1",
     "nunjucks-markdown": "^2.0.1",
     "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
@@ -50,6 +54,7 @@
     "validator": "^13.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^4.1.1",
     "@types/chance": "^1.0.10",
     "@types/debug": "^4.1.5",
     "@types/hapi__joi": "^15.0.4",
@@ -62,14 +67,15 @@
     "@types/koa-static": "^4.0.1",
     "@types/luxon": "^1.22.0",
     "@types/marked": "^0.7.4",
-    "@types/node": "^13.13.2",
-    "@types/numeral": "0.0.26",
+    "@types/node": "^13.13.4",
+    "@types/numeral": "0.0.27",
     "@types/nunjucks": "^3.1.3",
     "@types/qrcode": "^1.3.4",
     "@types/superagent": "^4.1.7",
     "@types/validator": "^13.0.0",
     "bootstrap": "^4.4.1",
     "bootstrap.native": "^2.0.27",
+    "concurrently": "^5.2.0",
     "faker": "^4.1.0",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
@@ -79,10 +85,11 @@
     "jest": "^25.4.0",
     "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
+    "npm-run-all": "^4.1.5",
     "rollup": "^2.7.2",
-    "rollup-plugin-babel-minify": "^10.0.0",
-    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-terser": "^5.3.0",
     "ts-jest": "^25.4.0",
+    "ts-node": "^8.9.1",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
   },
@@ -91,7 +98,9 @@
   },
   "nodemonConfig": {
     "ignore": [
-      "public/**",
+      "build/**",
+      "client/**",
+      "views/**",
       "test/**"
     ],
     "env": {
@@ -99,10 +108,6 @@
       "PORT": 4300,
       "DEBUG": "user*"
     },
-    "execMap": {
-      "ts": "ts-node"
-    },
-    "verbose": true,
-    "ext": "ts"
+    "verbose": true
   }
 }
