--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "validator": "^13.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-typescript": "^4.1.1",
     "@types/chance": "^1.0.10",
     "@types/debug": "^4.1.5",
@@ -82,7 +85,10 @@
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.7.2",
+    "rollup-plugin-svelte": "^5.2.1",
     "rollup-plugin-terser": "^5.3.0",
+    "svelte": "^3.21.0",
+    "svelte-preprocess": "^3.7.4",
     "ts-jest": "^25.4.0",
     "ts-node": "^8.9.1",
     "tslib": "^1.11.1",
