--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "test": "jest",
     "postversion": "git push && git push --tags",
     "clean": "rm -rf build/*",
-    "build-css": "node-sass --output-style=compressed --include-path=node_modules/bootstrap client/scss/main.scss build/style/main.css",
+    "watch-css": "sass --watch --style=expanded --load-path=node_modules/bootstrap client/scss/main.scss build/style/main.css",
+    "build-css": "sass --style=compressed --load-path=node_modules/bootstrap client/scss/main.scss build/style/main.css",
     "build-ts": "tsc -p client --outDir build/ts-out",
     "watch-ts": "tsc -p client -w --outDir build/ts-out",
     "build-js": "rollup -c client/rollup.config.js",
     "watch-js": "rollup -c client/rollup.config.js -w",
-    "dev": "npm-run-all --parallel watch-js",
+    "dev": "npm-run-all --parallel watch-js watch-css",
     "build": "npm run build-js && npm run build-css"
   },
   "repository": {
@@ -81,12 +82,12 @@
     "faker": "^4.1.0",
     "inline-source": "^7.2.0",
     "jest": "^25.4.0",
-    "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.7.2",
     "rollup-plugin-svelte": "^5.2.1",
     "rollup-plugin-terser": "^5.3.0",
+    "sass": "^1.26.5",
     "svelte": "^3.21.0",
     "svelte-preprocess": "^3.7.4",
     "ts-jest": "^25.4.0",
