--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,7 @@
       "moduleResolution": "node",
       "resolveJsonModule": true,
       "sourceMap": true,
-      "outDir": "dist",
-      "paths": {
-          "*": [
-              "node_modules/*",
-              "src/types/*"
-          ]
-      }
+      "outDir": "dist"
   },
   "include": [
       "src/**/*"
