--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@hapi/joi": "^15.1.1",
     "chance": "^1.1.4",
     "csrf": "^3.1.0",
+    "date-fns": "^2.13.0",
     "debug": "^4.1.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
