--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "luxon": "^1.25.0",
     "marked": "^1.2.0",
     "mobile-detect": "^1.4.4",
+    "node-cache": "^5.1.2",
     "numeral": "^2.0.6",
     "nunjucks": "^3.2.2",
     "nunjucks-markdown": "^2.0.1",
@@ -73,6 +74,7 @@
     "@types/luxon": "^1.25.0",
     "@types/marked": "^1.1.0",
     "@types/node": "^14.11.8",
+    "@types/node-cache": "^4.2.5",
     "@types/numeral": "0.0.28",
     "@types/nunjucks": "^3.1.3",
     "@types/qrcode": "^1.3.5",
