--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "@types/qrcode": "^1.3.5",
     "@types/superagent": "^4.1.10",
     "@types/validator": "^13.1.0",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^5.0.0-alpha2",
     "bootstrap.native": "^3.0.13",
     "faker": "^5.1.0",
     "inline-source": "^7.2.0",
